--- a/HTML/nextstep.html
+++ b/HTML/nextstep.html
@@ -31,12 +31,221 @@
                   <a class="nav-link" href="nextstep.html">NextStepAI</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="aboutus.html">About Us</a>
+                  <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
               </ul>
               <button class="btn btn-outline-success" href="login.html"  type="button" style="position: absolute; right: 1%;">Login with UPC </button>
             </div>
-            <img src="Img\1200px-Logotip_FIB.svg.png" width="90" height="90" class="d-inline-block align-top" alt="" style="position: absolute; right: 1%; top: 890%;">
+        </nav>
 
-          </nav>
-   
+
+
+
+        <div class = "container" >
+
+          <main>
+              <h2>Marks</h2>
+          </main>
+          <table class="tableAI" style="position: absolute, up: 1%;">
+              <thead>
+                <tr>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">F</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">FM</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">IC</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">PRO1</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+
+
+                <tr>
+                  <th scope="row">M1</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">M2</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">PRO2</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">EC</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+
+
+                <tr>
+                  <th scope="row">EDA</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">BD</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">CI</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">PE</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+
+                </tr>
+
+                <tr>
+                  <th scope="row">SO</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">AC</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">EEE</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">IDI</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+
+                <tr>
+                  <th scope="row">IES</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">XC</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">PAR</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">PROP</th>
+                  <td>
+                      <form>
+                          <p><input type="float" name="nota">
+                      </form>
+                  </td>
+                </tr>
+
+              <button type="button" class="btn3 btn-success">Make prediction</button>
+
+              </tbody>
+            </table>
+          </div>   
+    </footer>
+ </body>
+</html>
+
