--- a/HTML/todo.html
+++ b/HTML/todo.html
@@ -33,7 +33,7 @@
                   <a class="nav-link" href="nextstep.html">NextStepAI</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="aboutus.html">About Us</a>
+                  <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
               </ul>
               <button class="btn btn-outline-success" href="login.html"  type="button" style="position: absolute; right: 1%;">Login with UPC </button>
